# quantum_stuff

./: .gitignore  Input_MG_long.npy  J_xx.npy  J_z.npy  LICENSE.txt  README.md  best_fits.json  best_fitsq1.json  best_fitsq2.json  lyap.npy  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  sk.npy  synchronization.ipynb  test.ipynb  test_requirements.txt  y_pred.npy
Codici/: quantum_stuff.py  synchronization ensemble.ipynb  synchronization_new.ipynb  synchronization_parallel_test.py
Old/: HarmonicOscillators.py  Input_MG.npy  quantum_stuff.py  spatial_multiplexing.ipynb  synchronization_consistency.ipynb  synchronization_parallel_test.py
QuantumStuff/: Evolution.py  Metrics.py  Operators.py  QRC.py  States.py  __init__.py  utils.py
QuantumStuff.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: README.md  __init__.py  test_evolution.py  test_integration.py  test_metrics.py  test_operators.py  test_states.py  test_utils.py
